--- a/index.html
+++ b/index.html
@@ -9,6 +9,20 @@
   <title>grid grid grid</title>
 </head>
 <body>
-    <script type="module" src="base.js"></script>
+  <!--<input onchange="readFile(this)" type="file">
+  <script>
+    function readFile(input) {
+      let file = input.files[0]; 
+      let fileReader = new FileReader(); 
+      fileReader.readAsText(file); 
+      fileReader.onload = function() {
+        alert(fileReader.result);
+      }; 
+      fileReader.onerror = function() {
+        alert(fileReader.error);
+      }; 
+    }
+  </script> -->
 </body>
+    <script type="text/javascript" src="base.js"></script>
 </html>
