--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="description" content="quelques exercices de base pour se mettre en jambe">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="../../assets/CSS/cssTD7exo1.css">
-  <title>grid grid grid</title>
+  <title>BashToJS</title>
 </head>
 <body>
   <!--<input onchange="readFile(this)" type="file">
