--- a/index.html
+++ b/index.html
@@ -1,28 +1,74 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="description" content="quelques exercices de base pour se mettre en jambe">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="../../assets/CSS/cssTD7exo1.css">
-  <title>BashToJS</title>
+  <link rel="stylesheet" href="style.css">
+  <title>Le juste nombre</title>
 </head>
+
 <body>
-  <!--<input onchange="readFile(this)" type="file">
-  <script>
-    function readFile(input) {
-      let file = input.files[0]; 
-      let fileReader = new FileReader(); 
-      fileReader.readAsText(file); 
-      fileReader.onload = function() {
-        alert(fileReader.result);
-      }; 
-      fileReader.onerror = function() {
-        alert(fileReader.error);
-      }; 
-    }
-  </script> -->
+
+  <section>
+    <h1>Le jeu du +/-</h1>
+    <p>Le but du jeu est de trouver le juste nombre en un minimum de coups.</p>
+    <p>Le nombre est compris entre 1 et 99.</p>
+  </section>
+  <fieldset id="niveau">
+    <legend>Choisir un niveau</legend>
+
+    <div>
+      <input type="radio" name="level" value="1">
+      <label for="facile">Facile</label>
+    </div>
+
+    <div>
+      <input type="radio" name="level" value="2">
+      <label for="moyen">Moyen</label>
+    </div>
+
+    <div>
+      <input type="radio" name="level" value="3">
+      <label for="difficile">Difficile</label>
+    </div>
+  </fieldset>
+  <div>
+    <fieldset id="choix">
+      <legend>Choisir un nombre</legend>
+      <form>
+        <input type="number" name="number" id="number" min="1" max="99">
+        <input type="button" id="valider-choix" value="Valider">
+      </form>
+    </fieldset>
+  </div>
+  <div id="plus">
+    <p>le nombre que vous cherchez est plus grand</p>
+  </div>
+  <div id="moins">
+    <p>le nombre que vous cherchez est plus petit</p>
+  </div>
+  <div id="gagne">
+    <p>Bravo, vous avez gagné !</p>
+  </div>
+  <div id="perdu">
+    <p>Vous avez perdu !</p>
+  </div>
+  <div>
+    <fieldset id="fin">
+      <legend>Fin du jeu</legend>
+      <form>
+        <input type="text" name="player" id="player" placeholder="Votre nom">
+        <input type="button" id="valider-nom" value="Valider">
+      </form>
+    </fieldset>
+    <div id="nom-invalid">
+      <p>Votre nom est trop grand veuillez en choisir un autre</p>
+    </div>
+    <div id="nom-valid"/>
+  </div>
 </body>
-    <script type="module" src="base.mjs"></script>
+<script type="module" src="base.mjs"></script>
+
 </html>
