--- a/index.html
+++ b/index.html
@@ -53,5 +53,5 @@
 </body>
 
 
-    <script type="text/javascript" src="base.js"></script>
+    <script type="text/javascript" src="base.mjs"></script>
 </html>
