--- a/index.html
+++ b/index.html
@@ -108,6 +108,6 @@
   </div>
     
 </body>
-<script type="module" src="base.mjs"></script>
+<script type="module" src="run.mjs"></script>
 
 </html>
